syntax = "proto3";

package helloworld;

option go_package = "github.com/nintran52/go-kit-grpc";

service Greeter { rpc SayHello(HelloRequest) returns (HelloReply); }

message HelloRequest { string name = 1; }

message HelloReply { string message = 1; }
